(scroll to top) Fix z-index so it doesn't appear on top of mobile sidebars

--- a/src/app/shared/components/misc/scroll-to-top/scroll-to-top.component.scss
+++ b/src/app/shared/components/misc/scroll-to-top/scroll-to-top.component.scss
@@ -4,7 +4,7 @@
   position: fixed;
   width: auto;
   bottom: 2rem;
-  z-index: 9998;
+  z-index: 1029;
   box-shadow: 0 0 .75rem rgba(0, 0, 0, .75);
 
   &.position-left {
